--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="contact_img"><img src="images/placeholder.png" alt="" /></div>
           <div class="forum">
-            <form id="contact" method="post" action="mailto:warrevandenhoucke@hotmail.com?subject=Form contact" enctype="multipart/form-data">
+            <form id="contact" method="post" action="mail.php" enctype="multipart/form-data">
               <h1>Quick Contact</h>
               <fieldset>
                 <input required
