--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="contact_img"><img src="images/placeholder.png" alt="" /></div>
           <div class="forum">
             <!-- <form id="contact" method="post" action="mail.php" enctype="multipart/form-data"> -->
-              <form id="contact" method="post" action="mailto:warrevandenhoucke@hotmail.com?subject:Contact Form" enctype="multipart/form-data"></form>
+              <form id="contact" method="post" action="https://mailto:warrevandenhoucke@hotmail.com?subject:Contact Form" enctype="multipart/form-data"></form>
               <h1>Quick Contact</h>
               <fieldset>
                 <input required
