--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
                 >
               </fieldset>
             </form> -->
-            <form name="contact" method="POST" data-netlify="true">
+            <form
+              name="Contact form"
+              action="#contact"
+              enctype="multipart/form-data"
+              data-netlify="true"
+            >
               <p>
                 <label>Your Name: <input type="text" name="name" /></label>
               </p>
