--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
                 <label>Message: <textarea name="message"></textarea></label>
               </p>
               <p>
-                <button type="submit">Send</button>
+                <button type="submit" id="submitBtn">Send</button>
               </p>
+              <p id="text"></p>
             </form>
           </div>
         </div>
