--- a/index.html
+++ b/index.html
@@ -95,39 +95,9 @@
             <img src="images/placeholder.png" alt="" />
           </div>
           <div class="forum">
-            <!-- <form id="contact" method="post" action="mail.php">
-              <h1>Quick Contact</h>
-              <fieldset>
-                <input required
-                  placeholder="Your name"
-                  name="name"
-                  type="text"
-                />
-              </fieldset>
-              <fieldset>
-                <input required
-                  placeholder="Your Email Address"
-                  name="email"
-                  type="email"
-                />
-              </fieldset>
-              <fieldset>
-                <textarea required id="message"
-                  name="message"
-                  placeholder="Type your Message Details Here..."
-                ></textarea>
-              </fieldset>
-              <fieldset>
-                <input 
-                  type="submit"
-                  name="submit"
-                  id="contact-submit" value="Submit"
-                >
-              </fieldset>
-            </form> -->
             <form
               name="Contact form"
-              action="#contact"
+              action=""
               enctype="multipart/form-data"
               data-netlify="true"
             >
