--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="forum">
             <form
               name="Contact form"
-              action=""
+              action="succes"
               enctype="multipart/form-data"
               data-netlify="true"
             >
