--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               action="succes"
               enctype="multipart/form-data"
               data-netlify="true"
+              id="form"
             >
               <p>
                 <label>Your Name: <input type="text" name="name" /></label>
