--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
               data-netlify="true"
               id="form"
             >
+              <h1>Contact me</h1>
               <p>
                 <label>Your Name: <input type="text" name="name" /></label>
               </p>
