--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <nav class="row" id="navbar">
-          <div class="ToTheTop">
+          <div id="ToTheTop">
             <a href="#"
               ><i class="fa-solid fa-angles-up"></i> To the top
               <i class="fa-solid fa-angles-up"></i
@@ -72,73 +72,69 @@
     </section>
     <section id="aboutme">
       <div class="container">
-        <div class="row">
-          <div class="aboutMeText">
-            <h1>About me</h1>
-            <p>
-              My name is Warre Vandenhoucke. I am 18 years old and I am a
-              Computer Science student at Hogent. I've been in love with
-              programming and developing since high school and that's why I'm
-              trying to persue a career in it.
-            </p>
-          </div>
-          <div class="aboutMeImage">
-            <img src="images/placeholder.png" alt="" />
-          </div>
+        <div class="aboutMeText">
+          <h1>About me</h1>
+          <p>
+            My name is Warre Vandenhoucke. I am 18 years old and I am a Computer
+            Science student at Hogent. I've been in love with programming and
+            developing since high school and that's why I'm trying to persue a
+            career in it.
+          </p>
+        </div>
+        <div class="aboutMeImage">
+          <img
+            src="images/275985906_444965254070790_5674524442160350781_n.jpg"
+            alt=""
+          />
         </div>
       </div>
     </section>
     <section id="contact">
       <div class="container">
-        <div class="row">
-          <div class="contact_img">
-            <img src="images/placeholder.png" alt="" />
-          </div>
-          <div class="forum">
-            <form
-              name="Contact form"
-              action="succes"
-              enctype="multipart/form-data"
-              data-netlify="true"
-              id="form"
-            >
-              <h1>Contact me</h1>
-              <p>
-                <label
-                  >Your Name:
-                  <input
-                    type="text"
-                    name="name"
-                    required
-                    placeholder="Your name..."
-                /></label>
-              </p>
-              <p>
-                <label
-                  >Your Email:
-                  <input
-                    type="email"
-                    name="email"
-                    required
-                    placeholder="Your email..."
-                /></label>
-              </p>
-              <p>
-                <label
-                  >Message:
-                  <textarea
-                    name="message"
-                    required
-                    placeholder="Your message..."
-                  ></textarea>
-                </label>
-              </p>
-              <p>
-                <button type="submit" id="submitBtn">Submit</button>
-              </p>
-              <p id="text"></p>
-            </form>
-          </div>
+        <div class="forum">
+          <form
+            name="Contact form"
+            action="succes"
+            enctype="multipart/form-data"
+            data-netlify="true"
+            id="form"
+          >
+            <h1>Contact me</h1>
+            <p>
+              <label
+                >Your Name:
+                <input
+                  type="text"
+                  name="name"
+                  required
+                  placeholder="Your name..."
+              /></label>
+            </p>
+            <p>
+              <label
+                >Your Email:
+                <input
+                  type="email"
+                  name="email"
+                  required
+                  placeholder="Your email..."
+              /></label>
+            </p>
+            <p>
+              <label
+                >Message:
+                <textarea
+                  name="message"
+                  required
+                  placeholder="Your message..."
+                ></textarea>
+              </label>
+            </p>
+            <p>
+              <button type="submit" id="submitBtn">Submit</button>
+            </p>
+            <p id="text"></p>
+          </form>
         </div>
       </div>
     </section>
