--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h1>Contact me</h1>
             <p>
               <label
-                >Your Name:
+                >Name:
                 <input
                   type="text"
                   name="name"
@@ -112,7 +112,7 @@
             </p>
             <p>
               <label
-                >Your Email:
+                >Email:
                 <input
                   type="email"
                   name="email"
