--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <script
       src="https://kit.fontawesome.com/75ca6fed99.js"
@@ -44,7 +50,7 @@
       <div class="container">
         <h1>Warre Vandenhoucke</h1>
         <div class="links">
-          <a href="#aboutme">Get to know me</a>
+          <a href="#aboutme">About me</a>
           <a href="#contact">Contact me</a>
         </div>
       </div>
@@ -52,7 +58,6 @@
     <section id="projects">
       <div class="container">
         <h1>Projects</h1>
-        <p>These are my current projects:</p>
         <div class="projects">
           <a href="index.html">My portfolio</a>
         </div>
@@ -76,9 +81,10 @@
           <h1>About me</h1>
           <p>
             My name is Warre Vandenhoucke. I am 18 years old and I am a Computer
-            Science student at Hogent. I've been in love with programming and
-            developing since high school and that's why I'm trying to persue a
-            career in it.
+            Science student at Hogent. <br />I've been in love with programming
+            and developing since high school and that's why I'm trying to persue
+            a career in it. <br />In highschool we would sometimes work on small
+            programming tasks and these were always a lot of fun for me.
           </p>
         </div>
         <div class="aboutMeImage">
